--- a/index.html
+++ b/index.html
@@ -5,32 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Favicon (Browser Tab Icon) -->
-  <link rel="icon" type="image/png" href="/images/teddverse-logo.png" />
-  <link rel="apple-touch-icon" href="/images/teddverse-logo.png" />
 
   <!-- Primary Meta Tags -->
-  <title>Teddverse Technologies - Building Digital Solutions That Matter</title>
-  <meta name="title" content="Teddverse Technologies - Building Digital Solutions That Matter" />
-  <meta name="description" content="We transform ideas into powerful, scalable products that drive business growth. Mobile apps, web solutions, and digital experiences." />
+  <title>Shotayo Boluwatife - Mobile Application Developer</title>
+  <meta name="title" content="Shotayo Boluwatife - Mobile Application Developer" />
+  <meta name="description" content="Mobile Application Developer with 4+ years of experience in Flutter, Android, Swift, and cross-platform development. Building apps that people actually enjoy using." />
 
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.teddverse.pro/" />
-  <meta property="og:title" content="Teddverse Technologies - Building Digital Solutions That Matter" />
-  <meta property="og:description" content="We transform ideas into powerful, scalable products that drive business growth. Mobile apps, web solutions, and digital experiences." />
-  <meta property="og:image" content="https://www.teddverse.pro/images/teddverse-logo.png" />
+  <meta property="og:url" content="https://www.shotayobolu.com/" />
+  <meta property="og:title" content="Shotayo Boluwatife - Mobile Application Developer" />
+  <meta property="og:description" content="Mobile Application Developer with 4+ years of experience in Flutter, Android, Swift, and cross-platform development. Building apps that people actually enjoy using." />
+  <meta property="og:image" content="https://www.shotayobolu.com/images/profile.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://www.teddverse.pro/" />
-  <meta property="twitter:title" content="Teddverse Technologies - Building Digital Solutions That Matter" />
-  <meta property="twitter:description" content="We transform ideas into powerful, scalable products that drive business growth. Mobile apps, web solutions, and digital experiences." />
-  <meta property="twitter:image" content="https://www.teddverse.pro/images/teddverse-logo.png" />
-
-  <!-- Telegram -->
-  <meta property="telegram:channel" content="@teddverse" />
+  <meta property="twitter:url" content="https://www.shotayobolu.com/" />
+  <meta property="twitter:title" content="Shotayo Boluwatife - Mobile Application Developer" />
+  <meta property="twitter:description" content="Mobile Application Developer. Building apps that people actually enjoy using." />
+  <meta property="twitter:image" content="https://www.shotayobolu.com/images/shotayo-profile.png" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Days+One&display=swap" rel="stylesheet" />
@@ -38,7 +33,7 @@
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="/src/main.jsx"></script> <!-- leave this for React entry if using Vite -->
+<script type="module" src="/src/main.jsx"></script>
 <script src="/assets/js/jquery-3.3.1.min.js"></script>
 <script src="/assets/js/popper.min.js"></script>
 <script src="/assets/js/bootstrap.min.js"></script>
@@ -47,6 +42,5 @@
 <script src="/assets/js/owl.carousel.min.js"></script>
 <script src="/assets/js/smoothscroll.js"></script>
 <script src="/assets/js/custom.js"></script>
-
 </body>
 </html>
