--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.shotayobolu.com/" />
   <meta property="og:title" content="Shotayo Boluwatife - Mobile Application Developer" />
-  <meta property="og:description" content="Mobile Application Developer with 4+ years of experience in Flutter, Android, Swift, and cross-platform development. Building apps that people actually enjoy using." />
-  <meta property="og:image" content="https://www.shotayobolu.com/images/profile.jpg" />
+  <meta property="og:description" content="Mobile Application Developer. Building apps that people actually enjoy using." />
+  <meta property="og:image" content="https://theshotayobolutife.vercel.app/images/profile.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
